# vessel

./: .gitignore  CMakeLists.txt  DATABASE_SCHEMA.md  IDEAS.md  Makefile  README.md  voice-leading-scratch.md
cmake/: cpm.cmake
data/: chords.json  chords.sql  chords_backup.sql
gui/: package-lock.json  package.json
gui/src/: index.js
gui/src/components/: test-three.js
plugin/: CMakeLists.txt
plugin/config/: Chords.h  Constants.h
plugin/config/migrations/: create_chords_table.sql  simple_traditional_chords.sql
plugin/database/: DatabaseManager.cpp
plugin/include/Vessel/: Chord.h  ChordManager.h  DatabaseManager.h  MidiProcessor.h  ParameterIDs.h  PluginEditor.h  PluginProcessor.h
plugin/models/: Chord.h
plugin/source/: Chord.cpp  MidiProcessor.cpp  PluginEditor.cpp  PluginProcessor.cpp
plugin/source/helpers/: WebViewHelpers.h
plugin/ui/: .gitignore  index.html  jsconfig.json  package-lock.json  package.json  vite.config.js
plugin/ui/public/: index.html
plugin/ui/public/js/: App.js  index.js
plugin/ui/src/: App.js  App.jsx
plugin/ui/src/components/: ChordCard.js  ChordCard.jsx  ChordMap.js  ChordMap.jsx  Dock.js  Dock.jsx  HamburgerMenu.jsx  JuceCheckbox.jsx  JuceComboBox.jsx  JuceSlider.jsx  Tooltip.jsx
plugin/ui/src/services/: ipc.js
plugin/ui/src/store/: actionTypes.js  store.js
plugin/ui/src/store/slices/: dockSlice.js  mapSlice.js  parametersSlice.js  previewedChordSlice.js
plugin/ui/src/styles/: ChordCard.css  ChordMap.css  Dock.css  HamburgerMenu.css  components.css  main.css  variables.css
plugin/ui/src/utils/: threeUtils.js
plugin/ui/src/views/settings/: index.jsx
tests/: CMakeLists.txt  ChordTest.cpp
